--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -37,3 +37,7 @@ newArchEnabled=true
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+MYAPP_UPLOAD_STORE_FILE=FeedSpikeCoreCrossword-upload-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
+MYAPP_UPLOAD_STORE_PASSWORD=F$9mR2!qV7#tN4pX
+MYAPP_UPLOAD_KEY_PASSWORD=F$9mR2!qV7#tN4pX
